feat: Week 5 - Prometheus metrics with counters and histograms